--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="">
     <title>小米商城</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_ip2h7ctydy.css">  
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_lvnjm669d5.css">  
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/rest.css">
 </head>
@@ -55,17 +55,58 @@
                </a>
             </div>
             <ul>
-                <li><a href="JavaScript:;">小米手机</a></li>
-                <li><a href="JavaScript:;">Redmi 红米</a></li>
-                <li><a href="JavaScript:;">电视</a></li>
-                <li><a href="JavaScript:;">笔记本</a></li>
-                <li><a href="JavaScript:;">家电</a></li>
-                <li><a href="JavaScript:;">路由器</a></li>
-                <li><a href="JavaScript:;">智能硬件</a></li>
-                <li><a href="JavaScript:;">服务</a></li>
-                <li><a href="JavaScript:;">社区</a></li>
+                <li>
+                    <a href="JavaScript:;">小米手机</a>
+                    <div>1</div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">Redmi 红米</a>
+                    <div>2</div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">电视</a>
+                    <div>3</div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">笔记本</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">家电</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">路由器</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">智能硬件</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">服务</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a href="JavaScript:;">社区</a>
+                    <div></div>
+                </li>
             </ul>
-            <div class="search"></div>
+            <div class="search">
+                <input type="text">
+                <div class="btn"><i class="iconfont icon-sousuo"></i></div>
+                <div class="msg"></div>
+                <div class="tip1">
+                    <a href="JavaScript:;">
+                        <h3>小米9 Pro 5G</h3>
+                    </a>
+                </div>
+                <div class="tip2">
+                    <a href="JavaScript:;">
+                        <h3>Redmi Note 8</h3>
+                    </a>
+                </div>
+            </div>
         </article>
         <article class="carousel-chart public">
             <div class="carousel-chart-nav"></div>
