--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="">
     <title>小米商城</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_wet7ix478j.css">  
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_1twreoc5wzw.css">  
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/rest.css">
 </head>
@@ -452,154 +452,208 @@
     <main>
         <article class="main-title public" id="main-title-flash-purchase">
             <h2>小米闪购</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li><i class="iconfont icon-zuojiantou1"></i></li>
+                    <li><i class="iconfont icon-iconfonti"></i></li>
+                </ul>
+            </div>
         </article>
         <article class="main-flash-purchase public">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/miaosha.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomiqt.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomisb.png" alt=""></a></li>
+                <li><a href=""><img src="./images/gc.png" alt=""></a></li>
+                <li><a href=""><img src="./images/js.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
-        <article class="main-title public">
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/xiaomi10d.jpg" alt=""></a>
+        </article>
+        <article class="main-title public main-title-p">
             <h2>手机</h2>
-            <div></div>
+            <div>
+                <span>查看全部</span>
+                <div><i class="iconfont icon-iconfonti"></i></div>
+            </div>
         </article>
         <article class="main-commodity public">
-            <div></div>
+            <div>
+                <a href=""><img src="./images/xiaomiMIX.jpg" alt=""></a>
+            </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi1.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi2.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi1.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi2.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi1.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi2.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi1.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi2.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/xiaomitvd.jpg" alt=""></a>
+        </article>
         <article class="main-title public">
             <h2>家电</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li>热门</li>
+                    <li>电视影音</li>
+                </ul>
+            </div>
         </article>
         <article class="main-commodity public">
             <div>
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href=""><img src="./images/xiaomijinshui.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./images/xiaomijiqiren.jpg" alt=""></a></li>
                 </ul>
             </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/mianfeid.jpg" alt=""></a>
+        </article>
         <article class="main-title public">
             <h2>智能</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li>热门</li>
+                    <li>安防</li>
+                    <li>出行</li>
+                </ul>
+            </div>
         </article>
         <article class="main-commodity public">
             <div>
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href=""><img src="./images/xiaomijinshui.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./images/xiaomijiqiren.jpg" alt=""></a></li>
                 </ul>
             </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi31.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi32.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi31.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi32.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi31.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi32.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi31.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi32.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/menlind.jpg" alt=""></a>
+        </article>
         <article class="main-title public">
             <h2>搭配</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li>热门</li>
+                    <li>耳机音箱</li>
+                </ul>
+            </div>
         </article>
         <article class="main-commodity public">
             <div>
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href=""><img src="./images/xiaomijinshui.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./images/xiaomijiqiren.jpg" alt=""></a></li>
                 </ul>
             </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/mijiad.jpg" alt=""></a>
+        </article>
         <article class="main-title public">
             <h2>配件</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li>热门</li>
+                    <li>保护套</li>
+                    <li>充电器</li>
+                </ul>
+            </div>
         </article>
         <article class="main-commodity public">
             <div>
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href=""><img src="./images/xiaomijinshui.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./images/xiaomijiqiren.jpg" alt=""></a></li>
                 </ul>
             </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/mitud.jpg" alt=""></a>
+        </article>
         <article class="main-title public">
             <h2>周边</h2>
-            <div></div>
+            <div>
+                <ul>
+                    <li>热门</li>
+                    <li>出行</li>
+                </ul>
+            </div>
         </article>
         <article class="main-commodity public">
             <div>
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href=""><img src="./images/xiaomijinshui.jpg" alt=""></a></li>
+                    <li><a href=""><img src="./images/xiaomijiqiren.jpg" alt=""></a></li>
                 </ul>
             </div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi21.png" alt=""></a></li>
+                <li><a href=""><img src="./images/xiaomi22.png" alt=""></a></li>
             </ul>
         </article>
-        <article class="main-advertisement public">图片</article>
-        <article class="main-title public">
+        <article class="main-advertisement public">
+            <a href=""><img src="./images/xiaomijud.jpg" alt=""></a>
+        </article>
+        <article class="main-title public main-title-p">
             <h2>视频</h2>
-            <div></div>
+            <div>
+                <span>查看全部</span>
+                <div><i class="iconfont icon-iconfonti"></i></div>
+            </div>
         </article>
         <article class="main-video public">
             <ul>
