--- a/index.html
+++ b/index.html
@@ -684,8 +684,69 @@
                 <li><a href=""><i class="iconfont icon-dingwei"></i><span>520余家售后网点</span></a></li>
             </ul>
             <div>
-                <ul></ul>
-                <div></div>
+                <ul>
+                    <li>
+                        <h3>帮助中心</h3>
+                        <ul>
+                            <li><a href="">账户管理</a></li>
+                            <li><a href="">购物指南</a></li>
+                            <li><a href="">订单操作</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>服务支持</h3>
+                        <ul>
+                            <li><a href="">售后政策</a></li>
+                            <li><a href="">自助服务</a></li>
+                            <li><a href="">相关下载</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>线下门店</h3>
+                        <ul>
+                            <li><a href="">小米之家</a></li>
+                            <li><a href="">服务网点</a></li>
+                            <li><a href="">授权体验店</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>关于小米</h3>
+                        <ul>
+                            <li><a href="">了解小米</a></li>
+                            <li><a href="">加入小米</a></li>
+                            <li><a href="">投资者关系</a></li>
+                            <li><a href="">廉洁举报</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>关注我们</h3>
+                        <ul>
+                            <li><a href="">新浪微博</a></li>
+                            <li><a href="">官方微信</a></li>
+                            <li><a href="">联系我们</a></li>
+                            <li><a href="">公益基金会</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>特色服务</h3>
+                        <ul>
+                            <li><a href="">F 码通道</a></li>
+                            <li><a href="">礼物码</a></li>
+                            <li><a href="">防伪查询</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div>
+                    <p>400-100-5678</p>
+                    <p>8:00-18:00（仅收市话费）</p>
+                    <a href="">
+                        <i></i>
+                        人工客服
+                    </a>
+                    <div>
+                        关注小米：
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
