--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="">
     <title>小米商城</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_799yb885dsd.css">  
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_gpxmkol3ivn.css">  
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/rest.css">
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css">
@@ -27,7 +27,14 @@
                     <li><a href="JavaScript:;">企业团购</a></li>
                     <li><a href="JavaScript:;">资质证照</a></li>
                     <li><a href="JavaScript:;">协议规则</a></li>
-                    <li><a href="JavaScript:;">下载app</a></li>
+                    <li>
+                        <a href="JavaScript:;" >下载app</a>
+                        <i class="iconfont icon-shangjiantoushixinxiao"></i>
+                        <div>
+                            <img src="./images/xiaomima.png" alt="">
+                            小米商城 APP
+                        </div>
+                    </li>
                     <li><a href="JavaScript:;">Select Location</a></li>
                 </ul>
             </div>
@@ -740,7 +747,7 @@
                     <p>400-100-5678</p>
                     <p>8:00-18:00（仅收市话费）</p>
                     <a href="">
-                        <i></i>
+                        <i class="iconfont icon-xiaoxi"></i>
                         人工客服
                     </a>
                     <div>
