--- a/index.html
+++ b/index.html
@@ -751,7 +751,11 @@
                         人工客服
                     </a>
                     <div>
-                        关注小米：
+                        <span>关注小米：</span>
+                        <a href=""></a>
+                        <a href="">
+                            <div><img src="./images/download.png" alt=""></div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -759,15 +763,15 @@
     </footer>
     <footer class="footer-links">
         <div>
-            <img src="" alt="">
-            <div>
-                <ul>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
+            <div class="logo-footer"></div>
+            <div class="links">
+                <ul class="sites">
+                    <li><a>小米商城</a></li>
+                    <li><a>MIUI</a></li>
+                    <li><a>米家</a></li>
+                    <li><a>米聊</a></li>
+                    <li><a>多看</a></li>
+                    <li><a>游戏</a></li>
                     <li><a></a></li>
                     <li><a></a></li>
                     <li><a></a></li>
