--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="Description" content="">
     <title>小米商城</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_gpxmkol3ivn.css">  
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1694611_ej4bvjaev46.css">  
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/rest.css">
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css">
-	<script type="text/javaScript" src="layui/layui.js"></script>
+    <script type="text/javaScript" src="layui/layui.js"></script>
 </head>
 <body>
     <header>
@@ -772,24 +772,82 @@
                     <li><a>米聊</a></li>
                     <li><a>多看</a></li>
                     <li><a>游戏</a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
+                    <li><a>政企服务</a></li>
+                    <li><a>小米天猫店</a></li>
+                    <li><a>小米集团隐私政策</a></li>
+                    <li><a>小米公司儿童信息保护规则</a></li>
+                    <li><a>小米商城隐私政策</a></li>
+                    <li><a>小米商城用户协议</a></li>
+                    <li><a>问题反馈</a></li>
+                    <li><a>Select Location</a></li>
                 </ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-            </div>
+                <ul class="list">
+                    <li><a href="">©</a></li>
+                    <li><a href="">mi.com</a></li>
+                    <li><a href="">京ICP证110507号</a></li>
+                    <li><a href="">京ICP备10046444号</a></li>
+                    <li><a href="">京公网安备11010802020134号</a></li>
+                    <li><a href="">京网文[2020]0276-042号</a></li>
+                </ul>
+                <ul class="list">
+                    <li><a href=""> （京）</a></li>
+                    <li><a href="">网械平台备字</a></li>
+                    <li><a href=""> （2018）</a></li>
+                    <li><a href="">第00005号</a></li>
+                    <li><a href="">互联网药品信息服务资格证</a></li>
+                    <li><a href="">(京)-非经营性-2014-0090</a></li>
+                    <li><a href="">营业资格照</a></li>
+                    <li><a href="">医疗器械质量公告</a></li>
+                </ul>
+                <ul class="list">
+                    <li><a href="">增值电信业务许可证</a></li>
+                    <li><a href="">网络食品经营备案</a></li>
+                    <li><a href="">（京）</a></li>
+                    <li><a href="">【2018】</a></li>
+                    <li><a href="">WLSPJYBAHF-12</a></li>
+                    <li><a href="">食品经营许可证</a></li>
+                </ul>
+                <ul class="list">
+                   <li><a href="">违法和不良信息举报电话：185-0130-1238</a></li>
+                   <li><a href="">知识产权侵权投诉</a></li>
+                   <li><a href="">本网站所列数据，除特殊说明外，所有数据均出自我司实验室测试</a></li>
+                </ul>
+                <ul class="list-t list">
+                    <li><a href=""><img src="./images/truste.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/v-logo-2.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/v-logo-1.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/cxjy.png" alt=""></a></li>
+                </ul>
+                <h3>让全球每个人都能享受科技带来的美好生活</h3>
         </div>
-        <h3></h3>
     </footer>
+    <aside>
+        <a href="">
+            <div></div>
+            <span>手机APP</span>
+            <article class="logo-m">
+                <img src="./images/download.png" alt="">
+                <span>手机扫一扫一分赢好礼</span>
+            </article>
+            <i class="iconfont icon-ico_arrowright"></i>
+        </article>
+        <a href="">
+            <div></div>
+            <span>个人中心</span>
+        </a>
+        <a href="">
+            <div></div>
+            <span>售后服务</span>
+        </a>
+        <a href="">
+            <div></div>
+            <span>人工客服</span>
+        </a>
+        <a href="">
+            <div></div>
+            <span>&nbsp&nbsp&nbsp购物车</span>
+        </a>
+    </aside>
     <script type="text/javaScript">
 		layui.use('carousel', function(){
 		var carousel = layui.carousel;
